Fixed various things to make it work with 1.7.10 Added findercompass mod